# KNoise

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
KNoise/: CMakeLists.txt  KNoise.cpp  KNoise.hpp  PCH.hpp  Perlin.cpp  Perlin.hpp  kstd.cpp  kstd.hpp
Sandbox/: CMakeLists.txt  main.cpp
